added disqus, share, tags for blog

--- a/themes/hsft/layouts/partials/blog/tag-list.html
+++ b/themes/hsft/layouts/partials/blog/tag-list.html
@@ -1,13 +1,11 @@
 <div class="tag-holder">
     <ul>
         {{range $t := .Params.Tags }}
-        
-            <!--if (shouldRender(tag))-->
-            <!--{-->
+            {{if (and (ne $t "blog") (ne $t "news") ) }}        
                 <li>
                     <a href="/">{{ $t }}</a>
                 </li>
-            <!--}-->
+            {{ end }}
         {{ end }}
     </ul>
 </div>
