different top nav for blog

--- a/themes/hsft/layouts/partials/blog/top-nav.html
+++ b/themes/hsft/layouts/partials/blog/top-nav.html
@@ -12,16 +12,16 @@
         </li> -->
 
 
-        <li {{ if ne . "blog" }}class="active"{{ end }}><a title="Home" href="#hsft" class=" scroll brand-4">HSFT</a></li>
-        <li><a title="Services" href="#services" class=" scroll brand-1">Services</a></li>
-        <li><a title="Technology" href="#technology" class=" scroll brand-3">Technology</a></li>
+        <li><a title="Home" href="/#hsft" class=" brand-4">HSFT</a></li>
+        <li><a title="Services" href="/#services" class=" brand-1">Services</a></li>
+        <li><a title="Technology" href="/#technology" class=" brand-3">Technology</a></li>
         <li>
             <a  title="Community"
-                href="#community"
-                class=" scroll brand-2">Community
+                href="/#community"
+                class=" brand-2">Community
             </a>
         </li>
-         <li {{ if eq . "blog" }}class="active"{{ end }}>
+         <li class="active">
             <a title="Blog"
                href="/ashic/blog"
                class=' scroll brand-4'>
