--- a/themes/hsft/layouts/partials/header.html
+++ b/themes/hsft/layouts/partials/header.html
@@ -38,7 +38,11 @@
             </div>
 
             <!--   @RenderSection("navlinks", false) -->
-            {{ partial "top-nav.html" }}
+            {{ if eq . "blog"}}
+                {{ partial "blog/top-nav.html" . }}
+            {{ else }}
+                {{ partial "top-nav.html" . }}
+            {{ end }}
 
         </div>
         <!-- /.navbar-container -->
