--- a/themes/hsft/layouts/partials/header.html
+++ b/themes/hsft/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>The Story - responsive landing page</title>
+    <title>Heartysoft Solutions Limited</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="description" content="Twitter bootstrap theme">
