--- a/themes/hsft/layouts/section/blog.html
+++ b/themes/hsft/layouts/section/blog.html
@@ -33,7 +33,7 @@
                             {{range $t := $article.Params.tags }}
                                 {{if (and (ne $t "blog") (ne $t "news") ) }}
                                     <li>
-                                        <a href="{{/tags/{{$t | urlize }}/">{{ $t }}</a>
+                                        <a href="/tags/{{replace $t "#" "%23" | urlize }}/">{{ $t }}</a>
                                     </li>
                                 {{ end }}
                             {{ end }}
