--- a/docs/css/hsft.css
+++ b/docs/css/hsft.css
@@ -457,13 +457,23 @@ div.inner-page {
 .blog-post-summary div {
     background: #ecf9ff;
     padding: 0.5em;
-    min-height:16.5em;
 }
+
 .blog-post-summary div p {
     color: #000;
     width: auto;
     max-width: 740px;
     overflow: hidden
+}
+.blog-post-summary div:first-of-type {
+    position:relative;
+    min-height: 15.75em;
+}
+
+.blog-post-summary div p:nth-of-type(2) {
+    position: absolute;
+    bottom:0;
+    right: 1em;
 }
 
 .blog-post-summary div h4 {
