--- a/docs/css/hsft.css
+++ b/docs/css/hsft.css
@@ -70,6 +70,11 @@ div#article-content-holder>div.article-text{
     line-height: 1.6em;
 }
 
+
+div.article-text ul {
+  list-style: square
+}
+
 div#archive-content-holder>div {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
